@@ -1013,3 +1013,4 @@
 20040719 ui/fb/fbdisplay.c: remove unused variables (Darren).
 20040719 ui/xlib/xui.c: catch window close events (Darren).
 20040720 ui.c: fix missing return value (Darren).
+20040720 ui/fb/fbdisplay.c: generate palette dynamically (Darren).
